Fix portrait photo to be not centered on mobile device (#340)
Closes #339

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -10,7 +10,6 @@
 
     .about-photo--portrait {
       position: absolute;
-      border-radius: 50%;
       width: 200px;
       height: 200px;
       display: inline-block;
